--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,9 +25,7 @@ android {
 }
 
 repositories {
-    flatDir{
-        dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
-    }
+    // Use MavenCentral and Google repositories only
 }
 
 dependencies {
