--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,7 +17,11 @@ android {
         }
     }
     buildTypes {
+        debug {
+            debuggable true
+        }
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
