--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,36 +2,36 @@ apply plugin: 'com.android.application'
 
 android {
     kotlinOptions {
-        jvmTarget = '21'
+        jvmTarget = '17'
     }
     namespace "com.agriconnect.app"
-    compileSdk rootProject.ext.compileSdkVersion
+    compileSdk 34
+
     defaultConfig {
         applicationId "com.agriconnect.app"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdk 24
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
-            ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
-        }
 
         // Add Supabase configuration
         buildConfigField "String", "SUPABASE_URL", "\"${getSupabaseProperty("SUPABASE_URL")}\""
         buildConfigField "String", "SUPABASE_KEY", "\"${getSupabaseProperty("SUPABASE_KEY")}\""
     }
-    buildTypes {
-        debug {
-            debuggable true
-        }
-        release {
-            debuggable false
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+
+    buildFeatures {
+        compose true
+        buildConfig true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.5.1"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -40,19 +40,39 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
-    implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
-    implementation "androidx.core:core-splashscreen:$coreSplashScreenVersion"
-    implementation project(':capacitor-android')
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
-    implementation project(':capacitor-cordova-android-plugins')
+    def composeBom = platform('androidx.compose:compose-bom:2023.08.00')
+    implementation composeBom
+
+    // Core Android
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-compose:1.8.1'
+
+    // Compose
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.navigation:navigation-compose:2.7.5'
+
+    // Supabase
+    implementation 'io.github.jan-tennert.supabase:postgrest-kt:1.3.2'
+    implementation 'io.github.jan-tennert.supabase:realtime-kt:1.3.2'
+    implementation 'io.github.jan-tennert.supabase:storage-kt:1.3.2'
+    implementation 'io.ktor:ktor-client-android:2.3.6'
+
+    // Dependency Injection
+    implementation 'com.google.dagger:hilt-android:2.48'
+    kapt 'com.google.dagger:hilt-compiler:2.48'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
+
+    // Serialization
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 }
 
 apply from: 'capacitor.build.gradle'
 apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlinx-serialization'
 
 try {
     def servicesJSON = file('google-services.json')
