--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,11 +7,11 @@ plugins {
 }
 
 android {
-    namespace "com.agriconnect.app"
+    namespace "com.sokoconnect.app"
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.agriconnect.app"
+        applicationId "com.sokoconnect.app"
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -36,13 +36,13 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '21'
+        jvmTarget = '17'
         freeCompilerArgs += ["-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"]
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_21
-        targetCompatibility JavaVersion.VERSION_21
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
