--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor-community/bluetooth-le": "^7.1.1",
     "@capacitor/android": "^7.4.2",
     "@capacitor/app": "^7.0.1",
     "@capacitor/camera": "^7.0.1",
     "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/filesystem": "^6.0.4",
+    "@capacitor/haptics": "^8.0.0",
     "@capacitor/network": "^7.0.1",
     "@capacitor/push-notifications": "^7.0.1",
+    "@capacitor/share": "^6.0.4",
     "@capacitor/splash-screen": "^7.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@huggingface/transformers": "^3.5.2",
@@ -53,12 +57,14 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.20",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.6.0",
@@ -69,6 +75,7 @@
     "lucide-react": "^0.462.0",
     "mapbox-gl": "^3.12.0",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -76,7 +83,7 @@
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.30.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
