--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp'
-    id 'com.google.dagger.hilt.android'
-    id 'org.jetbrains.kotlin.plugin.serialization'
+    // id 'com.google.devtools.ksp'
+    // id 'com.google.dagger.hilt.android'
+    // id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -96,15 +96,15 @@ dependencies {
     implementation "androidx.camera:camera-view:1.3.0"
 
     // Dependency Injection
-    implementation "com.google.dagger:hilt-android:2.51.1"
-    ksp "com.google.dagger:hilt-android-compiler:2.51.1"
-    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
+    // implementation "com.google.dagger:hilt-android:2.51.1"
+    // ksp "com.google.dagger:hilt-android-compiler:2.51.1"
+    // implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
 
     // Image Loading
     implementation "io.coil-kt:coil-compose:2.5.0"
 
     // Serialization
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+    // implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -116,7 +116,7 @@ dependencies {
 }
 
 apply from: 'capacitor.build.gradle'
-apply plugin: 'dagger.hilt.android.plugin'
+// apply plugin: 'dagger.hilt.android.plugin'
 
 try {
     def servicesJSON = file('google-services.json')
